--- a/src/assets/css/helpers/color-scheme.scss
+++ b/src/assets/css/helpers/color-scheme.scss
@@ -51,7 +51,7 @@ info20    : #2ea2e6,
 info30    : #197db7,
 info40    : #125d88,
 info50    : #103e59,
-
+info60    : '#909090'
 );
 
 /* ---------------------------------------------------
