--- a/src/assets/css/pages/HomePage.scss
+++ b/src/assets/css/pages/HomePage.scss
@@ -1,15 +1,197 @@
 #HomePage{
     width            : 100%;
-    height           : 400px;
-    background       : url('https://wp-tid.zillowstatic.com/bedrock/app/uploads/sites/5/2023/06/1920w%402x_nationalbrand.webp');
-    background-size  : cover;
-    background-repeat: no-repeat;
-
     .boxShadow{
         // box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         -webkit-filter: drop-shadow(0px 0px 5px #000);
         filter: drop-shadow(0px 0px 5px #000);
     }
+
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #eee;
+  }
+  
+  
+ 
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #eee;
+  }
+  
+  .container {
+    width: 100%;
+    margin: 100px auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .price{
+    color: #fff;
+    background-color: rgba(0,0,0,.5);
+    padding: 5px 15px;
+    font-size: 19px;
+    position: absolute;
+    top: auto;
+    bottom: 0%;
+    left: auto;
+    right: 0%;
+  }
+  
+  .container .box {
+    width: calc(25% - 30px); /* Four boxes in one row */
+    background-color: white;
+    position: relative;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    border-radius: 5px;
+    margin: 32px 0px;
+    overflow: hidden;
+  }
+  
+  /* Media Query for responsive layout */
+  @media screen and (max-width: 1200px) {
+    .container .box {
+      width: calc(33.33% - 30px); /* Three boxes in one row */
+    }
+  }
+  
+  @media screen and (max-width: 900px) {
+    .container .box {
+      width: calc(50% - 30px); /* Two boxes in one row */
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .container .box {
+      width: 100%; /* One box per row */
+    }
+  }
+  
+  .container .box .top {
+    position: relative;
+  }
+  
+  .container .box .top:before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: rgba(20, 23, 23, 0.829);
+    position: absolute;
+    left: 0;
+    top: 0;
+    transition: 0.3s;
+    opacity: 0;
+  }
+  
+  .container .box .top:hover:before {
+    opacity: 1;
+  }
+  
+  .container .box .top:after {
+    content: "View Property";
+    color: white;
+    font-size: 12px;
+    padding: 10px;
+    border: 1px solid white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    transition: 0.3s;
+    opacity: 0;
+  }
+  
+  .container .box .top:hover:after {
+    opacity: 1;
+  }
+  
+  .container .box .top img {
+    width: 100%;
+    // margin-bottom: -4px;
+  }
+  
+  .container .box .top span {
+    position: absolute;
+    right: 20px;
+    bottom: 15px;
+    color: white;
+    font-size: 20px;
+  }
+  
+  .container .box .top span i {
+    margin-left: 5px;
+  }
+  
+  .container .box .bottom {
+    padding: 16px 16px 24px 16px;
+    position: relative;
+  }
+  
+  .container .box .bottom h3 {
+    font-size: 15px;
+  }
+  
+  .container .box .bottom > p {
+    margin: 15px 0;
+    font-size: 13px;
+    line-height: 1.4;
+    color: #777;
+  }
+  
+  .container .box .bottom .advants {
+    display: flex;
+  }
+  
+  .container .box .bottom .advants > div {
+    margin-right: 15px;
+  }
+  
+  .container .box .bottom .advants > div > span {
+    font-weight: bold;
+    font-size: 12px;
+  }
+  
+  .container .box .bottom .advants > div > div {
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .container .box .bottom .advants > div > div i {
+    color: #777;
+    font-size: 22px;
+  }
+  
+  .container .box .bottom .advants > div > div > span {
+    font-size: 12px;
+    font-weight: bold;
+    margin-left: 10px;
+  }
+  
+  .container .box .bottom .advants > div > div > span > span {
+    color: #777;
+    font-weight: normal;
+    margin-left: 5px;
+  }
+  
+  .container .box .bottom .price {
+    margin-top: 20px;
+  }
+  
+  .container .box .bottom .price span:first-of-type {
+    display: block;
+    font-size: 13px;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .container .box .bottom .price span:last-of-type {
+    color: #3eaba1;
+    font-size: 22px;
+  }
+  
 
 }
 
