--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -162,6 +162,10 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 2
   line-height: 10px !important;
 }
 
+h1,h2,h3,h4,h5,h6,p{
+  margin: 0px !important;
+}
+
 .headerCollapseIcon:hover {
   svg rect {
     fill: color(primary50);
