--- a/src/assets/css/pages/HomePage.scss
+++ b/src/assets/css/pages/HomePage.scss
@@ -207,6 +207,55 @@ body {
 
   }
 
+  .filterBox{
+    padding      : 32px;
+    border-top   : 1px solid rgb(204, 204, 204);
+    border-bottom: 1px solid rgb(204, 204, 204);
+    width        : 100%;
+  }
+
+  .singleFilter{
+    padding      : 8px 24px;
+    border       : 1px solid rgb(204, 204, 204);
+    border-radius: 8px;
+    margin-right : 16px;
+    cursor       : pointer;
+    position     : relative;
+  }
+
+  .singleFilter:hover, .singleRoom:hover{
+    background-color: rgb(241, 241, 244);
+    transition: ease 0.4s;
+  }
+
+  .filterComponentBox{
+    padding         : 24px;
+    position        : absolute;
+    border-radius   : 6px;
+    top             : 45px;
+    left            : 0px;
+    width           : 100%;
+    min-width       : 330px;
+    box-shadow      : rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    z-index         : 100;
+    background-color: white;
+  }
+
+  .singleRoom{
+    flex-grow: 1;
+    flex-basis: 0;
+    transition: all 0.2s ease 0s, visibility 0s ease 0s;
+    padding: 10px;
+    background-color: rgb(255, 255, 255);
+    border-left:1px solid rgb(167, 166, 171);
+    color: rgb(42, 42, 51);
+  }
+
+  .roomBox{
+    border:1px solid rgb(167, 166, 171);
+    border-left: 0px;
+  }
+
 }
 
 
