--- a/src/assets/css/pages/HomePage.scss
+++ b/src/assets/css/pages/HomePage.scss
@@ -86,6 +86,38 @@ body {
       margin-bottom: 8px !important;
     }
 
+    .mainContainer{
+      display: flex !important;
+    }
+
+    .container{
+      width:  100% !important;
+      padding: 0px 16px !important;
+
+    }
+
+    .paddingFix{
+      padding: 0px 16px !important;
+    }
+
+    .mainContainer{
+      flex-flow: row-reverse !important;
+      position: relative !important
+    }
+
+    .googleMapBox{
+      width: calc(100% - 36px)!important;
+      position: absolute !important;
+      z-index: 100;
+      left: 16px;
+      height: 400px;
+
+    }
+
+    .mt_430{
+      margin-top: 430px !important;
+    }
+
     .singleFilter{
       width: 100% !important;
       margin-bottom: 16px;
