--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -1244,7 +1244,7 @@ html {
   @media screen and (max-width: 600px) {
 
     .flexDirection{
-      flex-direction: row-reverse;
+      flex-direction: column-reverse;
     }
 
     .leftModalSection{
