--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -1247,6 +1247,14 @@ html {
       flex-direction: column-reverse;
     }
 
+    .price{
+      font-size: 24px !important;
+    }
+
+    .Heading15M{
+      font-size: 14px !important;
+    }
+
     .leftModalSection{
       max-height: 100% !important;
       margin-top: 32px;
