--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -1237,6 +1237,11 @@ html {
       font-size: 22px !important;
     }
 
+    .modalImages{
+      width: 100% !important;
+      height: 200px !important;
+    }
+
     .Body14R{
       font-size: 13px !important;
     }
