--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -89,6 +89,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 2
 
 .overflow-scroll{
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .text-align-justify{
@@ -1233,6 +1234,7 @@ html {
     .flexDirection{
       flex-direction: column-reverse;
       overflow-y: scroll;
+      -webkit-overflow-scrolling: touch;
     }
 
     .price{
@@ -1268,6 +1270,8 @@ html {
       max-height: 100% !important;
       margin-top: 32px;
       height: 100% !important;
+      -webkit-overflow-scrolling: touch;
+      overflow: scroll;
 
     }
 
@@ -1276,15 +1280,23 @@ html {
       padding-right: 8px !important;
       padding-left: 8px !important;
       height: 100% !important;
+      -webkit-overflow-scrolling: touch;
+      overflow: scroll;
+
     }
   }
 
   @media screen and (min-width: 601px) and (max-width: 991px) {
     .leftModalSection{
       height: 100% !important;
+      -webkit-overflow-scrolling: touch;
+      overflow: scroll;
     }
 
     .rightModalSection{
       height: 100% !important;
+      -webkit-overflow-scrolling: touch;
+      overflow: scroll;
+
     }
   }
