--- a/src/assets/css/pages/HomePage.scss
+++ b/src/assets/css/pages/HomePage.scss
@@ -543,3 +543,47 @@ body {
 .h-100vh{
   height: 95vh;
 }
+
+
+/* Modal.css */
+.modal-example {
+  text-align: center;
+  margin-top: 100px;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 90%;
+  max-height: 80%;
+  overflow: auto;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.modal-text {
+  max-height: 100%;
+  overflow: auto;
+}
+
+
+
+
+
