--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -370,12 +370,12 @@ a.hover-none:hover {
 }
 
 .leftModalSection{
-  max-height: 87vh;
+  max-height: 95vh;
   overflow-y: auto;
 }
 
 .rightModalSection{
-  max-height: 87vh;
+  max-height: 95vh;
   overflow-y: auto;
 }
 
@@ -1237,7 +1237,7 @@ html {
       -webkit-overflow-scrolling: touch;
     }
 
-    .price{
+    .mainPrice{
       font-size: 22px !important;
     }
 
