--- a/src/assets/css/pages/HomePage.scss
+++ b/src/assets/css/pages/HomePage.scss
@@ -83,6 +83,11 @@ body {
       margin-right: 8px;
     }
 
+    .modal-content{
+      overflow-y: auto !important;
+      max-width: 100% !important;
+    }
+
     .coverImg{
       height: 252px !important;
     }
@@ -150,6 +155,11 @@ body {
       margin-right: 8px;
     }
 
+
+    .modal-content{
+      overflow-y: auto !important;
+      max-width: 100% !important;
+    }
 
     .coverImg{
       height: 168px !important;
@@ -552,24 +562,40 @@ body {
 }
 
 .modal-overlay {
+  // display: none; /* Initially hidden */
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 999099; /* Adjust as needed */
+  pointer-events: none; /* Allow clicks to fall through when closed */
+}
+
+.modal-example{
+  top: 0px;
+  left: 0px;
+  position: fixed;
+}
+
+.modal-overlay.open {
+  display: flex; /* Display when modal is open */
+  pointer-events: auto; /* Enable click events when open */
+  overflow-y: auto; /* Allow modal content to be scrollable */
 }
 
 .modal-content {
   background-color: white;
   padding: 20px;
   border-radius: 8px;
-  max-width: 90%;
-  max-height: 80%;
-  overflow: auto;
+  max-width: 95%;
+  height: 100vh;
+  max-height: 100%;
+  overflow: hidden; /* Hide overflow on the modal content itself */
+  position: relative; /* Relative positioning for the close button */
 }
 
 .close-button {
