--- a/src/components/Widget/Widget.css
+++ b/src/components/Widget/Widget.css
@@ -74,6 +74,12 @@
   .box .top {
     position: relative;
   }
+
+  .toast{
+    position: fixed;
+    right: 24px;
+    top: 40px;
+  }
   
   .box .top:before {
     content: "";
@@ -270,6 +276,34 @@
   margin-top: 100px;
 }
 
+.contact-modal-example {
+  text-align: center;
+  z-index: 100000;
+}
+
+.contact-modal-example{
+  position: fixed;
+  z-index: 100000000;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+
+
+.contact-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  align-items: center;
+  justify-content: center;
+  z-index: 9990929; /* Adjust as needed */
+}
+
+
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -304,6 +338,48 @@
   max-height: 100%;
   overflow: hidden; /* Hide overflow on the modal content itself */
   position: relative; /* Relative positioning for the close button */
+}
+
+.contact-modal-content {
+  background-color: white !important;
+  padding: 24px;
+  border-radius: 8px;
+  height: fit-content;
+  top: 50%;
+  width: fit-content;
+  min-width: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-height: 100%;
+  position: relative; /* Relative positioning for the close button */
+}
+
+textarea:focus,input[type="text"]:focus,
+  input[type="email"]:focus,
+  input[type="password"]:focus {
+    outline: none;
+    border-color: #3498db;
+  }
+  
+
+  textarea,
+  input[type="text"],
+  input[type="email"],
+  input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+    transition: border-color 0.2s;
+  }
+
+  .form-group {
+    margin-bottom: 20px;
+  }
+
+textarea{
+  resize: none;
 }
 
 .close-button {
