--- a/src/components/Widget/Widget.css
+++ b/src/components/Widget/Widget.css
@@ -437,6 +437,10 @@ textarea{
     margin-left: 8px;
     margin-right: 8px;
   }
+
+  .contact-modal-content{
+    min-width: 97% !important;
+  }
   
   .modal-content img {
     max-width: 100%;
