--- a/src/components/Widget/Widget.css
+++ b/src/components/Widget/Widget.css
@@ -1,766 +1,99 @@
-/* styles.css */
-@import '~bootstrap/dist/css/bootstrap.min.css';
-
-/* Your additional styles here */
-
-
-.Heading10M{
-  font-size: 10px !important;
-}
-
-.Heading22B{
-  font-size: 22px;
-  font-weight: 700 !important;
-}
-
-.disclaimerText{
-  padding: 8px 24px;
-  width: 100%;
-  text-align: center;
-}
-
-.boxShadow{
-        -webkit-filter: drop-shadow(0px 0px 5px #000);
-        filter: drop-shadow(0px 0px 5px #000);
-    }
-
-    .marker-text{
-      color: white;
-      background-color: #A3000B;
-      border-radius: 8px;
-      padding: 2px 4px;
-      text-align: center;
-    }
-
-    .mainContainer{
-      width: fit-content;
-
-    }
-
-    #HomePage{
-        width     : 100%;
-        padding-top: 32px;
-        background-color: white;
-    }
-
-
-    body {
-        font-family: Arial, Helvetica, sans-serif;
-    }
   
   
- 
-  body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #eee;
-  }
-  
-  .price{
-    color: #fff;
-    background-color: rgba(0,0,0,.5);
-    padding: 5px 15px;
-    font-size: 19px;
-    position: absolute;
-    top: auto;
-    bottom: 0%;
-    left: auto;
-    right: 0%;
-  }
-  
-  .box {
-    width: calc(25% - 30px); /* Four boxes in one row */
-    background-color: white;
-    position: relative;
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
-    border-radius: 5px;
-    margin: 10px 0px;
-    overflow: hidden;
-    max-height: 320px;
-  }
-
-  .twoBoxes{
-    width: calc(50% - 12px) !important; /* Four boxes in one row */
-  }
-
-  .paddingFix{
-    padding: 0px 32px;
-  }
-  
-  .box .top {
-    position: relative;
-  }
-
-  .toast{
-    position: fixed;
-    right: 24px;
-    top: 40px;
-  }
-  
-  .box .top:before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    background-color: rgba(20, 23, 23, 0.829);
-    position: absolute;
-    left: 0;
-    top: 0;
-    transition: 0.3s;
-    opacity: 0;
-  }
-  
-  .box .top:hover:before {
-    opacity: 1;
-  }
-  
-  .box .top:after {
-    content: "View Property";
-    color: white;
-    font-size: 12px;
-    padding: 10px;
-    border: 1px solid white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    cursor: pointer;
-    transition: 0.3s;
-    opacity: 0;
-  }
-  
-  .box .top:hover:after {
-    opacity: 1;
-  }
-  
-  .box .top img {
-    width: 100%;
-  }
-  
-  .box .top span {
-    position: absolute;
-    right: 20px;
-    bottom: 15px;
-    color: white;
-    font-size: 20px;
-  }
-  
-  .box .top span i {
-    margin-left: 5px;
-  }
-  
-  .box .bottom {
-    padding: 16px 16px 24px 16px;
-    position: relative;
-  }
-  
-  .box .bottom h3 {
-    font-size: 15px;
-  }
-  
-  .box .bottom > p {
-    margin: 15px 0;
-    font-size: 13px;
-    line-height: 1.4;
-    color: #777;
-  }
-  
-  .box .bottom .advants {
+  #Homepage{
+    padding: 48px;
+    overflow: scroll;
     display: flex;
-  }
-  
-  .box .bottom .advants > div {
-    margin-right: 15px;
-  }
-  
-  .box .bottom .advants > div > span {
-    font-weight: bold;
-    font-size: 12px;
-  }
-  
-  .box .bottom .advants > div > div {
-    margin-top: 10px;
-    display: flex;
-    align-items: center;
-  }
-  
-  .box .bottom .advants > div > div i {
-    color: #777;
-    font-size: 22px;
-  }
-  
-  .box .bottom .advants > div > div > span {
-    font-size: 12px;
-    font-weight: bold;
-    margin-left: 10px;
-  }
-  
-  .box .bottom .advants > div > div > span > span {
-    color: #777;
-    font-weight: normal;
-    margin-left: 5px;
-  }
-  
-  .box .bottom .price {
-    margin-top: 20px;
-  }
-  
-  .box .bottom .price span:first-of-type {
-    display: block;
-    font-size: 13px;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  .box .bottom .price span:last-of-type {
-    color: #3eaba1;
-    font-size: 22px;
-  }
-  
-  .googleMapBox{
-    position: sticky;
-    top     : 0px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-
-  }
-
-  .filterBox{
-    padding      : 32px;
-    border-top   : 1px solid rgb(204, 204, 204);
-    border-bottom: 1px solid rgb(204, 204, 204);
-    width        : 100%;
-  }
-
-  .singleFilter{
-    padding      : 8px 24px;
-    border       : 1px solid rgb(204, 204, 204);
-    border-radius: 8px;
-    margin-right : 16px;
-    cursor       : pointer;
-    position     : relative;
-  }
-
-  .singleFilter:hover, .singleRoom:hover{
-    background-color: rgb(241, 241, 244);
-    transition: ease 0.4s;
-  }
-
-  .filterComponentBox{
-    padding         : 24px;
-    position        : absolute;
-    border-radius   : 6px;
-    top             : 45px;
-    left            : 0px;
-    width           : 100%;
-    min-width       : 330px;
-    box-shadow      : rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    z-index         : 100;
-    background-color: white;
-  }
-
-  .singleRoom{
-    flex-grow       : 1;
-    flex-basis      : 0;
-    transition      : ease 0.3s;
-    padding         : 10px;
-    background-color: rgb(255, 255, 255);
-    border-left     : 1px solid rgb(167, 166, 171);
-    color           : rgb(42, 42, 51);
-    height          : 48px;
-  }
-
-  .roomBox{
-    border:1px solid rgb(167, 166, 171);
-    border-left: 0px;
-  }
-
-  .selected{
-    border: 2px solid #2f80ed;
-    border-left: 3px solid #2f80ed;
-  }
-
-
-
-.h-100vh{
-  height: 95vh;
-}
-
-
-/* Modal.css */
-.modal-example {
-  text-align: center;
-  z-index: 100000;
-  margin-top: 100px;
-}
-
-.contact-modal-example {
-  text-align: center;
-  z-index: 100000;
-}
-
-.contact-modal-example{
-  position: fixed;
-  z-index: 100000000;
-  background-color: white;
-  border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-}
-
-
-
-.contact-modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  align-items: center;
-  justify-content: center;
-  z-index: 9990929; /* Adjust as needed */
-}
-
-
-.modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  align-items: center;
-  justify-content: center;
-  z-index: 999099; /* Adjust as needed */
-  pointer-events: none; /* Allow clicks to fall through when closed */
-}
-
-.modal-example{
-  top: 0px;
-  left: 0px;
-  position: fixed;
-}
-
-.modal-overlay.open {
-  display: flex; /* Display when modal is open */
-  pointer-events: auto; /* Enable click events when open */
-  overflow-y: auto; /* Allow modal content to be scrollable */
-}
-
-.modal-content {
-  background-color: white !important;
-  padding: 20px;
-  border-radius: 8px;
-  max-width: 97%;
-  height: 100vh;
-  max-height: 100%;
-  overflow: hidden; /* Hide overflow on the modal content itself */
-  position: relative; /* Relative positioning for the close button */
-}
-
-.contact-modal-content {
-  background-color: white !important;
-  padding: 24px;
-  border-radius: 8px;
-  height: fit-content;
-  top: 50%;
-  width: fit-content;
-  min-width: 35%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-height: 100%;
-  position: relative; /* Relative positioning for the close button */
-}
-
-textarea:focus,input[type="text"]:focus,
-  input[type="email"]:focus,
-  input[type="password"]:focus {
-    outline: none;
-    border-color: #3498db;
-  }
-  
-
-  textarea,
-  input[type="text"],
-  input[type="email"],
-  input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 14px;
-    transition: border-color 0.2s;
-  }
-
-  .form-group {
-    margin-bottom: 20px;
-  }
-
-textarea{
-  resize: none;
-}
-
-.close-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-
-.modal-text {
-  max-height: 100%;
-  overflow: auto;
-}
-
-.MainBox{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
-/* Your existing styles */
-/* ... */
-
-/* Media Queries */
-
-/* Media Query for responsive layout */
-@media screen and (max-width: 1200px) {
-  .box {
-    width: calc(33.33% - 30px); /* Three boxes in one row */
-  }
-
-
-  .twoBoxes {
-    width: 100% !important;
-  }
-}
-
-@media screen and (max-width: 991px) {
-  .box {
-    width: calc(50% - 30px); /* Two boxes in one row */
-  }
-  .twoBoxes {
-    width: 100% !important;
-  }
-}
-
-@media screen and (min-width: 1400px) {
-  .twoBoxes {
-    width: calc(33.33% - 30px) !important; /* Three boxes in one row */
-  }
-}
-
-@media screen and (min-width: 300px) and (max-width: 600px) {
-  .box {
-    width: 100%; /* One box per row */
-    margin-left: 8px;
-    margin-right: 8px;
-  }
-
-  .contact-modal-content{
-    min-width: 97% !important;
-  }
-  
-  .modal-content img {
-    max-width: 100%;
-  }
-
-
-  .MainBox{
-    width: 100% !important;
-  }
-
-  .container{
-    padding: 0px 16px !important;
-  }
-
-  .modal-content {
-    overflow-y: auto !important;
-    max-width: 100% !important;
-  }
-
-  .coverImg {
-    height: 200px !important;
-  }
-
-  .twoBoxes {
-    width: 100% !important;
-  }
-
-  .filterContainer {
-    flex-direction: column !important;
-    margin-bottom: 8px !important;
-
-  }
-
-  .descriptionText{
-    padding-bottom: 70px;
-  }
-
-  .mainContainer {
-    display: flex !important;
-    flex-flow: row-reverse !important;
-    position: relative !important;
-  }
-
-  .googleMapBox {
-    width: calc(100% - 36px) !important;
-    position: absolute !important;
-    z-index: 100;
-    left: 16px;
-    height: 400px;
-  }
-
-  .mt_430 {
-    margin-top: 430px !important;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-  }
-
-  .singleFilter {
-    width: 100% !important;
-    margin-bottom: 16px;
-    margin-right: 0px !important;
-  }
-
-  .mapIcons {
-    width: 100%;
-    margin-right: 16px;
-  }
-}
-
-@media screen and (min-width: 601px) and (max-width: 767px) {
-  .box {
-    margin-left: 8px;
-    margin-right: 8px;
-  }
-
-
-  .mainPrice{
-    font-size: 3.3vw!important;
-  }
-
-  .flexDirection{
-    overflow-y: scroll;
+    justify-content: space-between;
     height: 100vh;
+    scroll-behavior: smooth;
+  }
+  .leftSection{ 
+   width: 72%;
   }
 
-  .modal-content img {
-    max-width: 100%;
+  .rightSection{ 
+   width   : 25%;
+   position: -webkit-sticky;
+   position: sticky;
+   top: 0;
   }
-
-  .modal-content {
-    overflow-y: auto !important;
-    max-width: 100% !important;
-  }
-
-  .coverImg {
-    height: 200px !important;
-  }
-
-  .twoBoxes {
-    width: 100% !important;
-  }
-
-  .filterContainer {
-    flex-direction: row !important;
-    margin-bottom: 8px !important;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-
-  .leftModalSection,.rightModalSection{
-    max-height: unset !important;
-    overflow-y: unset !important;
-  }
-
-  .mainContainer {
-    display: flex !important;
-    flex-flow: row-reverse !important;
-    position: relative !important;
-  }
-
-  .googleMapBox {
-    width: calc(100% - 36px) !important;
-    position: absolute !important;
-    z-index: 100;
-    left: 16px;
-    height: 400px;
-  }
-
-  .mt_430 {
-    margin-top: 430px !important;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-  }
-
-  .singleFilter {
-    width: 48% !important;
-    margin-bottom: 16px;
-    margin-right: 0px !important;
-  }
-
-  .mapIcons {
-    width: 100%;
-    margin-right: 16px;
-  }
-}
-
-
-@media screen and (max-width: 1199px) {
-.tileIcons, .mapIcons{
-  justify-content: center !important;
-  width: 100%;
-  margin-bottom: 0px !important;
-  margin-top: 16px !important;
-}
-
-.mainPrice{
-  font-size: 3.3vw!important;
-}
-
-.mapIcons{
-  margin-left: 8px;
-}
-
-.marginFix{
-  margin-left: 0px !important;
   
-}
-}
 
-@media screen and (min-width: 768px) and (max-width: 991px) {
-  .box {
-    margin-left: 8px;
-    margin-right: 8px;
+  .singleSection{
+    border          : 1px solid #BDBDBD;
+    border-radius   : 20px;
+    background-color: #FAF9F9;
+    padding         : 32px;
+    margin-top      : 24px;
   }
 
-   
-  .mainPrice{
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start !important;
-
-
+  .gap-8{
+   gap: 32px;
   }
 
-  .mainPrice .Heading15M{
-    margin-left:  0px !important;
-    padding-top: 0px !important;
+  .singleCard{
+   border          : 1px solid #BDBDBD;
+   border-radius   : 8px;
+   padding         : 16px;
+   background-color: white;
+   flex-grow       : 1;
+   max-width       : 200px;
+   flex-basis      : 0;
   }
 
-  .modal-content img {
-    max-width: 100%;
+  .circle{
+   height       : 17px;
+   width        : 17px;
+   border-radius: 50%;
+   border       : 1px solid #BDBDBD;
+   position     : absolute;
+   top          : 12px;
+   right        : 12px;
   }
 
-  .twoBoxes {
-    width: 100% !important;
+  .singleCreator{
+     border : 1px solid #D9D9D9;
+     padding: 8px 16px;
+     border-radius: 10px;
   }
 
-  .filterContainer {
-    flex-direction: row !important;
-    margin-bottom: 8px !important;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  .Heading13M{
+    font-size: 13px;
+    font-weight: 500;
   }
 
-  .mainContainer {
-    display: flex !important;
-    flex-flow: row-reverse !important;
-    position: relative !important;
+  .Heading14R{
+    font-size: 16px;
+    font-weight: 500;
   }
 
-  .googleMapBox {
-    width: calc(100% - 36px) !important;
-    position: absolute !important;
-    z-index: 100;
-    left: 16px;
-    height: 400px;
+  .Caption12R{
+    font-size: 12px;
+    font-weight: 400;
   }
 
-  .mt_430 {
-    margin-top: 430px !important;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
+  .Heading15R{
+    font-size: 15px;
+    font-weight: 400;
   }
 
-  .singleFilter {
-    width: 48% !important;
-    margin-bottom: 16px;
-    margin-right: 0px !important;
+  .Heading15M{
+    font-size: 15px;
+    font-weight: 500;
   }
 
-  .mapIcons {
-    width: 100%;
-    margin-right: 16px;
-  }
-}
-
-@media screen and (min-width: 992px) and (max-width: 1199px) {
-  .box {
-    margin-left: 8px;
-    margin-right: 8px;
+  .Heading20M{
+    font-size: 20px;
+    font-weight: 500;
   }
 
-  .leftModalSection{
-    height: unset !important;
+
+  .Heading26M{
+    font-size: 26px;
+    font-weight: 500;
   }
 
-  .position-relative{
-    overflow-y: scroll;
-    overflow-x: hidden;
+  .Body14R{
+    
   }
-
-  .modal-content img {
-    max-width: 100%;
-    height: 285px;
-  }
-
-  .coverImg {
-    height: 200px !important;
-  }
-
-  .twoBoxes {
-    width: 100% !important;
-  }
-
-  .filterContainer {
-    flex-direction: row !important;
-    margin-bottom: 8px !important;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-
-  .mainContainer {
-    display: flex !important;
-    flex-flow: row-reverse !important;
-    position: relative !important;
-  }
-
-  .googleMapBox {
-    width: calc(100% - 36px) !important;
-    position: absolute !important;
-    z-index: 100;
-    left: 16px;
-    height: 400px;
-  }
-
-  .mt_430 {
-    margin-top: 430px !important;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-  }
-
-  .singleFilter {
-    width: 48% !important;
-    margin-bottom: 16px;
-    margin-right: 0px !important;
-  } 
-
-  .mapIcons {
-    width: 100%;
-    margin-right: 16px;
-  }
-}
-
-@media screen and (max-width: 1199px) {
-  .filterContainer{
-    justify-content: space-between !important;
-  }
-}
